# TIL-api

./: .gitignore  Makefile  README.md  main.py  notas.md  pyproject.toml
alembic/: env.py
api/: settings.py  urls.py
api/server/: models.py  views.py
app/: container.py  dependencia.py  main.py
app/alembic/: env.py
app/alembic/versions/: 4b81d19ef417_adiciona_coluna_contato_e_area.py  7c92dbb2dc86_adiciona_ordem.py  8dfa80002549_tabelas.py
app/api/request/: __init__.py  negocio_request.py  ordem_request.py
app/api/response/: __init__.py  negocio_response.py  ordem_response.py
app/api/route/: negocio_route.py  oferta_route.py  ordem_route.py
app/config/: connection.py  settings.py
app/modelo/postgres/: oferta_model.py  ordem_modelo.py
app/modelo/sqlite/: __init__.py  instituicao_modelo.py  negocio_modelo.py  ordem_modelo.py  usuario_modelo.py
app/repositorio/: __init__.py  negocio_repositorio.py  oferta_repositorio.py  ordem_repositorio.py
app/servico/: __init__.py  negocio_servico.py  oferta_servico.py  ordem_servico.py
app/utils/: enums.py  excecao.py
notas/: EstudoModeloSolidariedade.md  notasFastAPI.md  notasReuniaoSolidariedade.md
