[tool.poetry]
name = "til-api"
version = "0.1.0"
description = "Projeto mc855"
authors = ["Leonardo Koike <leokoike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
black = "^21.8b0"
SQLAlchemy = "^1.4.23"
alembic = "^1.7.1"
psycopg2-binary = "^2.9.1"
paginate-sqlalchemy = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
